--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,11 +1,11 @@
 .company, .company-loading {
-  border-radius: 20px;
-  background: linear-gradient(0deg, #e1e1e1, #FCFCFC, #FEFEFE, #ebebeb);
-  box-shadow: 0px 0px 5px 0px rgba(29, 29, 29, 0.35);
+  border-radius: 4px;
+  background: linear-gradient(0deg, rgb(220, 238, 238), rgb(230, 250, 250), rgb(252, 256, 256), rgb(230, 240, 240));
+  box-shadow: inset 0px 3px 5px rgba(29, 29, 29, 0.35);
   font-size: 28px;
   line-height: 28px;
   height: 80px;
-  padding: 28px 0;
+  padding: 20px 0px;
   width: 280px;
 }
 
@@ -15,14 +15,4 @@
   .companies-list {
     overflow: hidden;
   }
-}
-
-#idea-container {
-  font-size: 30px;
-  margin-left: 70px;
-  margin-top: 170px;
-}
-
-#meets {
-  padding: 30px 0px;
 }
