--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -10,26 +10,112 @@
     U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyyTh89ZNpQ.woff2) format('woff2');
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
 .App {
   align-items: center;
   font-family: sans-serif;
   text-align: center;
   width: 100%;
-  
-  button {
-    margin: 28px auto;
+}
+
+path {
+  stroke: teal;
+  fill: teal;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+}
+
+@keyframes draw {
+  0%   {
+    stroke-width: 10px;
+  }
+  25%  {
+    stroke-width: 6px;
+
+  }
+  50%  {
+    stroke-width: 5px;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    stroke-width: 2px;
   }
 }
 
-#company-title {
+#app-grid {
+  text-align: center;
+}
+
+
+.company-title {
+  background: linear-gradient(0deg, rgb(228, 238, 238), rgb(230, 250, 250), white, rgb(245, 250, 250));
+  border: 2px solid rgb(182, 23, 23);
+  border-radius: 0px;
+  box-shadow: inset 0px 2px 5px rgba(29, 29, 29, 0.35);
   font-family: "Courgette";
   font-size: 56px;
-  height: 40px;
-  width: 100%;
+  height: 80px;
+  line-height: 58px;
+  margin-top: 56px;
+  overflow: hidden;
+  padding: 20px;
+  width: 40px;
+
+  .letters {
+    padding: 0px;
+  }
+}
+
+.company-title-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 #default-header,
 #initial-header,
 #loading-header {
-  color: rgba(255, 255, 255, 0.3);
+  align-items: flex-end;
+  display: block;
+  margin: 112px auto 0px auto;
+  position: relative;
+  justify-content: center;
+}
+
+#generate-button {
+  background: radial-gradient(white, white, rgb(220, 246, 240));
+  border: 1px solid rgb(201, 224, 219);
+  border-radius: 9px;
+  border-bottom-width: 2px;
+  border-bottom-style: inset;
+  color: rgb(80, 120, 120);
+  font-family: 'Montserrat', Roboto, sans-serif;
+  font-size: 20px;
+  line-height: 40px;
+  padding: 0px 40px;
+  text-shadow: 1px 1px 2px white;
+
+  &:hover {
+    background: radial-gradient(white,rgb(220, 250, 250));
+  }
+
+  &:active {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+  }
+
+  &:disabled {
+    background-color: rgb(243, 243, 243);
+    border-color: darkgrey;
+    color: grey;
+  }
 }
