--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -10,15 +10,6 @@
     U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* cyrillic */
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyyTh89ZNpQ.woff2) format('woff2');
-  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-
 .App {
   align-items: center;
   font-family: sans-serif;
@@ -86,6 +77,7 @@ path {
 #loading-header {
   align-items: flex-end;
   display: block;
+  font-family: 'Courgette', Georgia, Roboto, 'Times New Roman', serif;
   margin: 112px auto 0px auto;
   position: relative;
   justify-content: center;
@@ -98,7 +90,6 @@ path {
   border-bottom-width: 2px;
   border-bottom-style: inset;
   color: rgb(80, 120, 120);
-  font-family: 'Montserrat', Roboto, sans-serif;
   font-size: 20px;
   line-height: 40px;
   padding: 0px 40px;
